git-annex (0.18) UNRELEASED; urgency=low

  * Bugfix: `copy --to` and `move --to` forgot to stage location log changes
    after transferring the file to the remote repository.
    (Did not affect ssh remotes.)
  * fsck: Fix bug in moving of corrupted files to .git/annex/bad/
  * Test suite improvements. Current top-level test coverage: 75%

 -- Joey Hess <joeyh@debian.org>  Tue, 11 Jan 2011 16:05:25 -0400

git-annex (0.17) unstable; urgency=low

  * unannex: Now skips files whose content is not present, rather than
    it being an error.
  * New migrate subcommand can be used to switch files to using a different
    backend, safely and with no duplication of content.
  * bugfix: Fix crash caused by empty key name. (Thanks Henrik for reporting.)

 -- Joey Hess <joeyh@debian.org>  Sun, 09 Jan 2011 10:04:11 -0400

git-annex (0.16) unstable; urgency=low

  * git-annex-shell: Avoid exposing any git repo config except for the
    annex.uuid when doing configlist.
  * bugfix: Running `move --to` with a remote whose UUID was not yet known
    could result in git-annex not recording on the local side where the
    file was moved to. This could not result in data loss, or even a
    significant problem, since the remote *did* record that it had the file.
  * Also, add a general guard to detect attempts to record information
    about repositories with missing UUIDs.
  * bugfix: Running `move --to` with a non-ssh remote failed.
  * bugfix: Running `copy --to` with a non-ssh remote actually did a move.
  * Many test suite improvements. Current top-level test coverage: 65%

 -- Joey Hess <joeyh@debian.org>  Fri, 07 Jan 2011 14:33:13 -0400

git-annex (0.15) unstable; urgency=low

  * Support scp-style urls for remotes (host:path).
  * Support ssh urls containing "~".
  * Add trust and untrust subcommands, to allow configuring repositories
    that are trusted to retain files without explicit checking.
  * Fix bug in numcopies handling when multiple remotes pointed to the