@@ -4,6 +4,7 @@ git-annex (0.18) UNRELEASED; urgency=low
     after transferring the file to the remote repository.
     (Did not affect ssh remotes.)
   * fsck: Fix bug in moving of corrupted files to .git/annex/bad/
+  * migrate: Fix support for --backend option.
   * Test suite improvements. Current top-level test coverage: 75%
 
  -- Joey Hess <joeyh@debian.org>  Tue, 11 Jan 2011 16:05:25 -0400
